--- a/package.json
+++ b/package.json
@@ -12,27 +12,36 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/deepdivedylan/angular5-example.git"
+    "url": "https://github.com/zachspangler/tux"
   },
   "dependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "core-js": "^2.5.1",
-    "rxjs": "^5.5.2",
+    "@angular/animations": "^5.1.0",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/router": "^5.1.0",
+    "@auth0/angular-jwt": "^1.0.0-beta.9",
+    "core-js": "^2.5.3",
+    "date-fns": "^1.29.0",
+    "filter": "^0.1.1",
     "jquery": "^3.2.1",
+    "jwt-decode": "^2.2.0",
+    "ng2-cookies": "^1.0.12",
+    "ng2-file-upload": "^1.3.0",
+    "ng2-search": "0.0.1",
+    "rxjs": "^5.5.5",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@types/node": "^8.0.47",
+    "@types/node": "^8.0.58",
     "awesome-typescript-loader": "^3.3.0",
-    "bootstrap-loader": "^2.2.0",
     "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-loader": "^2.2.0",
     "css-loader": "^0.28.7",
+    "eslint": "^4.13.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
@@ -43,16 +52,16 @@
     "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
     "null-loader": "^0.1.1",
-    "popper.js": "^1.12.6",
+    "popper.js": "^1.13.0",
     "raw-loader": "^0.5.1",
-    "resolve-url-loader": "^2.2.0",
+    "resolve-url-loader": "^2.2.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "typescript": "^2.6.1",
     "url-loader": "^0.6.2",
     "webpack": "^2.7.0",
-    "webpack-dev-server": "^2.9.3",
+    "webpack-dev-server": "^2.9.7",
     "webpack-merge": "^4.1.1"
   }
 }
